dart/vendor/sweph/lib/src/bindings.dart

// ignore_for_file: always_specify_types
// ignore_for_file: camel_case_types
// ignore_for_file: constant_identifier_names
// ignore_for_file: non_constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
import 'package:universal_ffi/ffi.dart' as ffi;

/// Bindings for Sweph.
///
/// Regenerate bindings with `dart run ffigen --config ffigen.yaml`.
/// Replace 'dart:ffi' with 'package:universal_ffi/ffi.dart'
///
class SwephBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  SwephBindings(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  SwephBindings.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  /// ext_def(x) evaluates to x on Unix
  int swe_heliacal_ut(
    double tjdstart_ut,
    ffi.Pointer<ffi.Double> geopos,
    ffi.Pointer<ffi.Double> datm,
    ffi.Pointer<ffi.Double> dobs,
    ffi.Pointer<ffi.Uint8> ObjectName,
    int TypeEvent,
    int iflag,
    ffi.Pointer<ffi.Double> dret,
    ffi.Pointer<ffi.Uint8> serr,
  ) {
    return _swe_heliacal_ut(
      tjdstart_ut,
      geopos,
      datm,
      dobs,
      ObjectName,
      TypeEvent,
      iflag,
      dret,
      serr,
    );
  }

  late final _swe_heliacal_utPtr = _lookup<
      ffi.NativeFunction<
          int32 Function(
              ffi.Double,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Uint8>,
              int32,
              int32,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Uint8>)>>('swe_heliacal_ut');
  late final _swe_heliacal_ut = _swe_heliacal_utPtr.asFunction<
      int Function(
          double,
          ffi.Pointer<ffi.Double>,
          ffi.Pointer<ffi.Double>,
          ffi.Pointer<ffi.Double>,
          ffi.Pointer<ffi.Uint8>,
          int,
          int,
          ffi.Pointer<ffi.Double>,
          ffi.Pointer<ffi.Uint8>)>();

  int swe_heliacal_pheno_ut(
    double tjd_ut,
    ffi.Pointer<ffi.Double> geopos,
    ffi.Pointer<ffi.Double> datm,
    ffi.Pointer<ffi.Double> dobs,
    ffi.Pointer<ffi.Uint8> ObjectName,
    int TypeEvent,
    int helflag,
    ffi.Pointer<ffi.Double> darr,
    ffi.Pointer<ffi.Uint8> serr,
  ) {
    return _swe_heliacal_pheno_ut(
      tjd_ut,
      geopos,
      datm,
      dobs,
      ObjectName,
      TypeEvent,
      helflag,
      darr,
      serr,
    );
  }

  late final _swe_heliacal_pheno_utPtr = _lookup<
      ffi.NativeFunction<
          int32 Function(
              ffi.Double,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Uint8>,
              int32,
              int32,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Uint8>)>>('swe_heliacal_pheno_ut');
  late final _swe_heliacal_pheno_ut = _swe_heliacal_pheno_utPtr.asFunction<
      int Function(
          double,
          ffi.Pointer<ffi.Double>,
          ffi.Pointer<ffi.Double>,
          ffi.Pointer<ffi.Double>,
          ffi.Pointer<ffi.Uint8>,
          int,
          int,
          ffi.Pointer<ffi.Double>,
          ffi.Pointer<ffi.Uint8>)>();

  int swe_vis_limit_mag(
    double tjdut,
    ffi.Pointer<ffi.Double> geopos,
    ffi.Pointer<ffi.Double> datm,
    ffi.Pointer<ffi.Double> dobs,
    ffi.Pointer<ffi.Uint8> ObjectName,
    int helflag,
    ffi.Pointer<ffi.Double> dret,
    ffi.Pointer<ffi.Uint8> serr,
  ) {
    return _swe_vis_limit_mag(
      tjdut,
      geopos,
      datm,
      dobs,
      ObjectName,
      helflag,
      dret,
      serr,
    );
  }

  late final _swe_vis_limit_magPtr = _lookup<
      ffi.NativeFunction<
          int32 Function(
              ffi.Double,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Uint8>,
              int32,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Uint8>)>>('swe_vis_limit_mag');
  late final _swe_vis_limit_mag = _swe_vis_limit_magPtr.asFunction<
      int Function(
          double,
          ffi.Pointer<ffi.Double>,
          ffi.Pointer<ffi.Double>,
          ffi.Pointer<ffi.Double>,
          ffi.Pointer<ffi.Uint8>,
          int,
          ffi.Pointer<ffi.Double>,
          ffi.Pointer<ffi.Uint8>)>();

  /// exports from sweph.c
  ffi.Pointer<ffi.Uint8> swe_version(
    ffi.Pointer<ffi.Uint8> arg0,
  ) {
    return _swe_version(
      arg0,
    );
  }

  late final _swe_versionPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Uint8> Function(
              ffi.Pointer<ffi.Uint8>)>>('swe_version');
  late final _swe_version = _swe_versionPtr
      .asFunction<ffi.Pointer<ffi.Uint8> Function(ffi.Pointer<ffi.Uint8>)>();

  ffi.Pointer<ffi.Uint8> swe_get_library_path(
    ffi.Pointer<ffi.Uint8> arg0,
  ) {
    return _swe_get_library_path(
      arg0,
    );
  }

  late final _swe_get_library_pathPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Uint8> Function(
              ffi.Pointer<ffi.Uint8>)>>('swe_get_library_path');
  late final _swe_get_library_path = _swe_get_library_pathPtr
      .asFunction<ffi.Pointer<ffi.Uint8> Function(ffi.Pointer<ffi.Uint8>)>();

  /// planets, moon, nodes etc.
  int swe_calc(
    double tjd,
    int ipl,
    int iflag,
    ffi.Pointer<ffi.Double> xx,
    ffi.Pointer<ffi.Uint8> serr,
  ) {
    return _swe_calc(
      tjd,
      ipl,
      iflag,
      xx,
      serr,
    );
  }

  late final _swe_calcPtr = _lookup<
      ffi.NativeFunction<
          int32 Function(ffi.Double, ffi.Int32, int32, ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Uint8>)>>('swe_calc');
  late final _swe_calc = _swe_calcPtr.asFunction<
      int Function(
          double, int, int, ffi.Pointer<ffi.Double>, ffi.Pointer<ffi.Uint8>)>();

  int swe_calc_ut(
    double tjd_ut,
    int ipl,
    int iflag,
    ffi.Pointer<ffi.Double> xx,
    ffi.Pointer<ffi.Uint8> serr,
  ) {
    return _swe_calc_ut(
      tjd_ut,
      ipl,
      iflag,
      xx,
      serr,
    );
  }

  late final _swe_calc_utPtr = _lookup<
      ffi.NativeFunction<
          int32 Function(ffi.Double, int32, int32, ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Uint8>)>>('swe_calc_ut');
  late final _swe_calc_ut = _swe_calc_utPtr.asFunction<
      int Function(
          double, int, int, ffi.Pointer<ffi.Double>, ffi.Pointer<ffi.Uint8>)>();

  int swe_calc_pctr(
    double tjd,
    int ipl,
    int iplctr,
    int iflag,
    ffi.Pointer<ffi.Double> xxret,
    ffi.Pointer<ffi.Uint8> serr,
  ) {
    return _swe_calc_pctr(
      tjd,
      ipl,
      iplctr,
      iflag,
      xxret,
      serr,
    );
  }

  late final _swe_calc_pctrPtr = _lookup<
      ffi.NativeFunction<
          int32 Function(
              ffi.Double,
              int32,
              int32,
              int32,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Uint8>)>>('swe_calc_pctr');
  late final _swe_calc_pctr = _swe_calc_pctrPtr.asFunction<
      int Function(double, int, int, int, ffi.Pointer<ffi.Double>,
          ffi.Pointer<ffi.Uint8>)>();

  double swe_solcross(
    double x2cross,
    double jd_et,
    int flag,
    ffi.Pointer<ffi.Uint8> serr,
  ) {
    return _swe_solcross(
      x2cross,
      jd_et,
      flag,
      serr,
    );
  }

  late final _swe_solcrossPtr = _lookup<
      ffi.NativeFunction<
          ffi.Double Function(ffi.Double, ffi.Double, int32,
              ffi.Pointer<ffi.Uint8>)>>('swe_solcross');
  late final _swe_solcross = _swe_solcrossPtr.asFunction<
      double Function(double, double, int, ffi.Pointer<ffi.Uint8>)>();

  double swe_solcross_ut(
    double x2cross,
    double jd_ut,
    int flag,
    ffi.Pointer<ffi.Uint8> serr,
  ) {
    return _swe_solcross_ut(
      x2cross,
      jd_ut,
      flag,
      serr,
    );
  }

  late final _swe_solcross_utPtr = _lookup<
      ffi.NativeFunction<
          ffi.Double Function(ffi.Double, ffi.Double, int32,
              ffi.Pointer<ffi.Uint8>)>>('swe_solcross_ut');
  late final _swe_solcross_ut = _swe_solcross_utPtr.asFunction<
      double Function(double, double, int, ffi.Pointer<ffi.Uint8>)>();

  double swe_mooncross(
    double x2cross,
    double jd_et,
    int flag,
    ffi.Pointer<ffi.Uint8> serr,
  ) {
    return _swe_mooncross(
      x2cross,
      jd_et,
      flag,
      serr,
    );
  }

  late final _swe_mooncrossPtr = _lookup<
      ffi.NativeFunction<
          ffi.Double Function(ffi.Double, ffi.Double, int32,
              ffi.Pointer<ffi.Uint8>)>>('swe_mooncross');
  late final _swe_mooncross = _swe_mooncrossPtr.asFunction<
      double Function(double, double, int, ffi.Pointer<ffi.Uint8>)>();

  double swe_mooncross_ut(
    double x2cross,
    double jd_ut,
    int flag,
    ffi.Pointer<ffi.Uint8> serr,
  ) {
    return _swe_mooncross_ut(
      x2cross,
      jd_ut,
      flag,
      serr,
    );
  }

  late final _swe_mooncross_utPtr = _lookup<
      ffi.NativeFunction<
          ffi.Double Function(ffi.Double, ffi.Double, int32,
              ffi.Pointer<ffi.Uint8>)>>('swe_mooncross_ut');
  late final _swe_mooncross_ut = _swe_mooncross_utPtr.asFunction<
      double Function(double, double, int, ffi.Pointer<ffi.Uint8>)>();

  double swe_mooncross_node(
    double jd_et,
    int flag,
    ffi.Pointer<ffi.Double> xlon,
    ffi.Pointer<ffi.Double> xlat,
    ffi.Pointer<ffi.Uint8> serr,
  ) {
    return _swe_mooncross_node(
      jd_et,
      flag,
      xlon,
      xlat,
      serr,
    );
  }

  late final _swe_mooncross_nodePtr = _lookup<
      ffi.NativeFunction<
          ffi.Double Function(
              ffi.Double,
              int32,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Uint8>)>>('swe_mooncross_node');
  late final _swe_mooncross_node = _swe_mooncross_nodePtr.asFunction<
      double Function(double, int, ffi.Pointer<ffi.Double>,
          ffi.Pointer<ffi.Double>, ffi.Pointer<ffi.Uint8>)>();

  double swe_mooncross_node_ut(
    double jd_ut,
    int flag,
    ffi.Pointer<ffi.Double> xlon,
    ffi.Pointer<ffi.Double> xlat,
    ffi.Pointer<ffi.Uint8> serr,
  ) {
    return _swe_mooncross_node_ut(
      jd_ut,
      flag,
      xlon,
      xlat,
      serr,
    );
  }

  late final _swe_mooncross_node_utPtr = _lookup<
      ffi.NativeFunction<
          ffi.Double Function(
              ffi.Double,
              int32,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Uint8>)>>('swe_mooncross_node_ut');
  late final _swe_mooncross_node_ut = _swe_mooncross_node_utPtr.asFunction<
      double Function(double, int, ffi.Pointer<ffi.Double>,
          ffi.Pointer<ffi.Double>, ffi.Pointer<ffi.Uint8>)>();

  int swe_helio_cross(
    int ipl,
    double x2cross,
    double jd_et,
    int iflag,
    int dir,
    ffi.Pointer<ffi.Double> jd_cross,
    ffi.Pointer<ffi.Uint8> serr,
  ) {
    return _swe_helio_cross(
      ipl,
      x2cross,
      jd_et,
      iflag,
      dir,
      jd_cross,
      serr,
    );
  }
